test/sema/typeck/lambda/variadic-expected-regular-given.dora
fn expects_variadic(f: (Int32...): Int32) {}

fn main() {
    let regular = |value: Int32|: Int32 {
        value
    };
    expects_variadic(regular);
}
